@@ -8,7 +8,8 @@ target database.
 from testlib.testing import \
      _block_unconditionally as no_support, \
      _chain_decorators_on, \
-     exclude
+     exclude, \
+     emits_warning_on
 
 
 def deferrable_constraints(fn):
@@ -66,8 +67,8 @@ def savepoints(fn):
     """Target database must support savepoints."""
     return _chain_decorators_on(
         fn,
+        emits_warning_on('mssql', 'Savepoint support in mssql is experimental and may lead to data loss.'),
         no_support('access', 'FIXME: guessing, needs confirmation'),
-        no_support('mssql', 'FIXME: guessing, needs confirmation'),
         no_support('sqlite', 'not supported by database'),
         no_support('sybase', 'FIXME: guessing, needs confirmation'),
         exclude('mysql', '<', (5, 0, 3), 'not supported by database'),
